# RayTracingCPP

./: CMakeLists.txt  README.md  cam.cpp  main.cpp  material.cpp  output.cpp  ray.cpp  ray.h  sphere.cpp  vecmath.cpp  vecmath.h
include/: cam.h  material.h  output.h  sphere.h  vecmath.h
